Added the CircleType functions and parameters.

--- a/PointTypeClass/PointTypeClass.vcxproj
+++ b/PointTypeClass/PointTypeClass.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="circleType.cpp" />
     <ClCompile Include="pointType.cpp" />
     <ClCompile Include="PointTypeClass.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="circleType.h" />
     <ClInclude Include="pointType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
