--- a/PointTypeClass/PointTypeClass.vcxproj.filters
+++ b/PointTypeClass/PointTypeClass.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="pointType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="circleType.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pointType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="circleType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
